# DCOps

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  STATE.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/: __init__.py
apps/agents/: __init__.py
apps/agents/executor/: __init__.py  actions.py  main.py
apps/agents/forensic/: __init__.py  main.py
apps/agents/operator/: __init__.py  main.py
apps/agents/optimizer/: __init__.py  main.py  solver.py
apps/agents/planner/: __init__.py  forecaster.py  main.py
apps/agents/rollback/: __init__.py  main.py
apps/agents/sentinel/: __init__.py  features.py  inference.py  main.py  rules.py  window.py
apps/agents/shared/: __init__.py  base.py  blob_client.py  event_bus.py  events.py  kg_client.py  llm_router.py  logging.py  prompts.py  ts_client.py  vector_client.py
apps/agents/shared/llm_backends/: __init__.py  anthropic.py  base.py  ollama.py
apps/agents/shared/quality/: __init__.py  escalation.py  few_shot.py  kg_grounding.py  reranker.py  schemas.py  self_consistency.py  semantic_cache.py  structured.py  verifier.py
apps/agents/vision/: __init__.py  main.py
apps/api/: __init__.py  main.py
apps/api/grpc/: __init__.py  federation.proto
apps/api/routes/: agents.py  federation.py  fleet.py  forecasts.py  incidents.py  query.py  recommendations.py  telemetry.py  twin.py  vision.py
apps/audit/: __init__.py  main.py  sink.py
apps/control_plane/: __init__.py  cross_site_correlator.py  fleet_view.py  main.py  policies.default.yml  policy_engine.py
apps/dashboard/: .gitignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/incidents/: page.tsx
apps/dashboard/app/query/: page.tsx
apps/dashboard/app/sites/[id]/: page.tsx
apps/dashboard/app/twin/: page.tsx
apps/dashboard/components/: .gitkeep  IncidentRow.tsx  MetricCard.tsx  PlotlyChart.tsx  StatusBadge.tsx  ThermalHeatmap.tsx
apps/ingestion/: __init__.py  main.py  schema.py
apps/ingestion/normalizers/: __init__.py  _http.py  dcgm.py  env.py  ipmi.py  redfish.py  snmp.py
apps/mocks/: __init__.py  main.py  topology.py
apps/physics/: __init__.py  entities.py  failure_injector.py  power.py  thermal.py  workload.py
apps/simulator/: __init__.py  devices.py  main.py  patterns.py  scenarios.py  sites.py
benchmarks/: __init__.py  generate.py  report.py  runner.py
benchmarks/scenarios/: crac_failure.yml  gpu_ecc_failure.yml  psu_degradation.yml  switch_cascade.yml  thermal_runaway.yml
case_study/: DRAFT.md  demo_script.md  metrics_template.md  release_checklist.md
data/: README.md
data/seeds/: .gitkeep
docs/prompts/: week-2.md
infra/docker/: Dockerfile.python
infra/grafana/dashboards/: fleet_overview.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: timescaledb.yaml
infra/neo4j/import/: seed_schema.cypher
infra/timescale/init/: 01_schema.sql
scripts/: _incidents_corpus.py  _runbooks_corpus.py  download_backblaze.sh  inject_failure.py  reset_db.sh  seed_graph.py  seed_incidents.py  seed_runbooks.py  seed_telemetry_sample.py  train_sentinel.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: conftest.py  test_agents_health_route.py  test_api_routes.py  test_audit_sink.py  test_bench_generate.py  test_bench_report.py  test_bench_runner.py  test_blob_client.py  test_cross_site_correlator.py  test_data_clients.py  test_event_bus.py  test_event_bus_streams.py  test_executor_agent.py  test_failure_injector.py  test_fleet_view.py  test_forensic_pipeline.py  test_ingestion_writer.py  test_llm_router_audit.py  test_mocks_actions.py  test_mocks_endpoints.py  test_normalizers.py  test_operator_chart_spec.py  test_operator_pipeline.py  test_operator_runbook_recall.py  test_optimizer_agent.py  test_optimizer_solver.py  test_planner_agent.py  test_planner_forecaster.py  test_policy_engine.py  test_quality_escalation.py  test_quality_few_shot.py  test_quality_kg_grounding.py  test_quality_schemas.py  test_quality_self_consistency.py  test_quality_semantic_cache.py  test_quality_structured.py  test_quality_verifier.py  test_query_route.py  test_rollback_agent.py  test_routes_fleet_federation.py  (+12 more)
