# =============================================================================
# DCOps Copilot — Python project configuration
# =============================================================================
# Managed with `uv` (https://github.com/astral-sh/uv) for fast installs.
# To install: `pip install uv && uv sync`
# To add a dep: `uv add <package>`  /  dev dep: `uv add --dev <package>`
# =============================================================================

[project]
name = "dcops-copilot"
version = "0.1.0"
description = "Autonomous Multi-Site Data Center Operations Platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "MiniPod", email = "mohammed.afaq@podtech.com" }]
keywords = ["datacenter", "ai-agents", "observability", "telemetry", "claude"]

# -----------------------------------------------------------------------------
# Runtime dependencies — pinned to known-good versions.
# -----------------------------------------------------------------------------
dependencies = [
    # --- Core web / async ---
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",

    # --- Event bus / cache / queues ---
    "redis[hiredis]==5.1.1",

    # --- Databases ---
    "psycopg[binary,pool]==3.2.3",     # TimescaleDB
    "neo4j==5.25.0",                    # Knowledge graph
    "chromadb==0.5.15",                 # Vector store
    "minio==7.2.9",                     # Raw log archive

    # --- LLM / embeddings ---
    # Default LLM backend is Ollama (local OSS, free) — talks HTTP via the
    # already-bundled httpx client; no SDK needed. The Anthropic SDK is now
    # an optional extra; install with `uv sync --extra anthropic` to enable
    # LLM_BACKEND=anthropic.
    "sentence-transformers==3.2.1",
    "tiktoken==0.8.0",

    # --- ML / forecasting / optimization ---
    "xgboost==2.1.2",
    "scikit-learn==1.5.2",
    "prophet==1.1.6",
    "ortools==9.11.4210",
    "numpy==1.26.4",                    # pinned for prophet compat
    "pandas==2.2.3",
    "scipy==1.14.1",

    # --- Telemetry sources ---
    "pysnmp==6.2.6",
    "requests==2.32.3",

    # --- gRPC (inter-site federation) ---
    "grpcio==1.66.2",
    "grpcio-tools==1.66.2",
    "protobuf==5.28.2",

    # --- Observability ---
    "structlog==24.4.0",
    "rich==13.9.2",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",

    # --- CLI / scripts ---
    "typer==0.12.5",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
# Heavy ML deps split out so the ingestion/api containers stay small.
ml = [
    "torch==2.4.1 ; platform_system != 'Darwin' or platform_machine != 'arm64'",
]

# Paid Claude API backend. Off by default — Ollama is the free path.
anthropic = [
    "anthropic==0.39.0",
]

# -----------------------------------------------------------------------------
# Dev dependencies — installed only with `uv sync --dev`.
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "fakeredis==2.25.1",
    "respx==0.21.1",                    # httpx mocking
    "ruff==0.7.0",
    "black==24.10.0",
    "mypy==1.12.0",
    "types-pyyaml==6.0.12.20240917",
    "types-requests==2.32.0.20240914",
    "pre-commit==4.0.1",
    "ipython==8.28.0",
]

# -----------------------------------------------------------------------------
# Tool configurations
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["apps/dashboard", "data", "infra/grafana"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by black
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "apps/dashboard|data|infra/grafana"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["apps/dashboard", "data", "infra"]

[[tool.mypy.overrides]]
module = ["prophet.*", "ortools.*", "chromadb.*", "pysnmp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=apps",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:.coverage_html",
]
markers = [
    "unit: fast unit tests (no I/O)",
    "integration: requires docker services up",
    "slow: takes > 5s",
]

[tool.coverage.run]
source = ["apps"]
omit = ["apps/dashboard/*", "**/__init__.py"]

# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]
